--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,6 @@ test {
 sonarqube {
     properties {
         property 'sonar.host.url', 'http://172.171.193.65:9000'
-        property 'sonar.login', 'admin'
-	property 'sonar.password', 'admin1'
+        property 'sonar.login', 'admin1'
     }
 }
