--- a/build.gradle
+++ b/build.gradle
@@ -25,16 +25,10 @@ test {
 	useJUnitPlatform()
 }
 
-def getSonarToken() {
-    def credentialsId = 'sonar-token'
-    withCredentials([string(credentialsId: credentialsId, variable: 'SONAR_TOKEN')]) {
-        return SONAR_TOKEN
-    }
-}
-
 sonarqube {
     properties {
         property 'sonar.host.url', 'http://172.171.193.65:9000'
-        property 'sonar.login', getSonarToken()
+        property 'sonar.login', 'admin'
+	property 'sonar.password', 'admin1'
     }
 }
