--- a/kube.yaml
+++ b/kube.yaml
@@ -1,83 +1,26 @@
----
-# Source: myapp/templates/service.yaml
-apiVersion: v1
-kind: Service
-metadata:
-  name: myapp
-  labels:
-    helm.sh/chart: myapp-0.2.0
-    app.kubernetes.io/name: myapp
-    app.kubernetes.io/instance: myapp
-    app.kubernetes.io/version: "1.16.0"
-    app.kubernetes.io/managed-by: Helm
-spec:
-  type: NodePort
-  ports:
-    - port: 8080
-      targetPort: http
-      protocol: TCP
-      name: http
-  selector:
-    app.kubernetes.io/name: myapp
-    app.kubernetes.io/instance: myapp
----
-# Source: myapp/templates/deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
-  labels:
-    helm.sh/chart: myapp-0.2.0
-    app.kubernetes.io/name: myapp
-    app.kubernetes.io/instance: myapp
-    app.kubernetes.io/version: "1.16.0"
-    app.kubernetes.io/managed-by: Helm
+  name: myapp-deployment
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
-      app.kubernetes.io/name: myapp
-      app.kubernetes.io/instance: myapp
+      app: myapp
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: myapp
-        app.kubernetes.io/instance: myapp
+        app: myapp
     spec:
-      imagePullSecrets:
-        - name: registry-secret
       containers:
-        - name: myapp
-          image: imagename
-          command: ["/bin/sh"]
-          args: ["-c","sh /usr/local/tomcat/bin/startup.sh;while true; do echo hello; sleep 10;done"]
-          imagePullPolicy: IfNotPresent
+        - name: myapp-container
+          image: ${NEXUS_REPO_URL}/springapp:${IMAGE_TAG}
           ports:
-            - name: http
-              containerPort: 8080
-              protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-            initialDelaySeconds: 60
-            periodSeconds: 5
-            successThreshold: 1
-            failureThreshold: 3
-            timeoutSeconds: 10
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
-            initialDelaySeconds: 60
-            periodSeconds: 5
-            successThreshold: 1
-            failureThreshold: 3
-            timeoutSeconds: 10
+            - containerPort: 8080
           resources:
-            requests:
-              memory: 0.25Gi
-              cpu: 0.5
             limits:
-              memory: 0.25Gi 
-              cpu: 0.5
+              cpu: "1"
+              memory: "512Mi"
+            requests:
+              cpu: "0.5"
+              memory: "256Mi"
